Fixed height problems on iOS device.

--- a/_sass/components.landing.scss
+++ b/_sass/components.landing.scss
@@ -1,7 +1,11 @@
 
 html {
-  height: 100%;
+  // height: 100%;
   background: radial-gradient(ellipse at bottom, $bg-color 0%, #090A0F 100%);
+  overflow: hidden;
+}
+
+body {
   overflow: hidden;
 }
 
